Added html folder, added and adjusted the nginx.tml

--- a/scripts/Procfile
+++ b/scripts/Procfile
@@ -1,1 +1,2 @@
-nginx: nginx
+nginx: /opt/nginx/sbin/nginx
+dockergen: docker-gen -watch -only-exposed -notify "/opt/nginx/sbin/nginx -s reload" /opt/scripts/nginx.tmpl /opt/nginx/conf/conf.d/default.conf
